# WebVOIGame

./: README.md  WebVOIGame.cabal  stack.yaml
app/: Actions.hs  Main.hs  Templates.hs
css/: game.css
html/: game.html
js/: game.js
src/Control/Monad/: Prob.hs
src/Data/: VoiGame.hs
