name:                WebVOIGame
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/WebVOIGame#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Prob
                     , Data.VoiGame
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , random
                     , random-shuffle
  default-language:    Haskell2010

executable WebVOIGame
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , WebVOIGame
                     , random
                     , transformers
                     , scotty
                     , warp
                     , http-types
                     , process
                     , text
